--- a/toolbox_academy_preview/dashboard.html
+++ b/toolbox_academy_preview/dashboard.html
@@ -35,9 +35,7 @@
     <p class="text-slate-300">Loading your dashboard...</p>
   </div>
 
-  <!-- Layout -->
   <div class="flex min-h-screen">
-
     <!-- Sidebar -->
     <aside class="w-64 bg-white shadow-md fixed h-full z-40">
       <div class="p-6 border-b">
@@ -65,9 +63,7 @@
         <form id="questionForm" class="space-y-4">
           <input type="text" id="topic" placeholder="Topic (e.g. HVAC, Electrical)" class="w-full px-4 py-2 border border-slate-300 rounded" required>
           <textarea id="questionText" placeholder="Type your question here..." class="w-full px-4 py-2 border border-slate-300 rounded h-32" required></textarea>
-          <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white py-2 px-6 rounded font-bold">
-            Submit
-          </button>
+          <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white py-2 px-6 rounded font-bold">Submit</button>
         </form>
       </section>
 
@@ -80,19 +76,15 @@
         <ul id="questionsList" class="space-y-2 text-slate-700"></ul>
       </section>
 
-      <!-- Flashcards -->
+      <!-- Coming Soon Sections -->
       <section id="flashcards" class="bg-white shadow rounded-xl p-6 mb-10">
         <h3 class="text-xl font-semibold mb-4">Flashcards</h3>
         <p class="text-slate-500">Coming soon...</p>
       </section>
-
-      <!-- Career Paths -->
       <section id="careers" class="bg-white shadow rounded-xl p-6 mb-10">
         <h3 class="text-xl font-semibold mb-4">Career Paths</h3>
         <p class="text-slate-500">Coming soon...</p>
       </section>
-
-      <!-- Study Guides -->
       <section id="guides" class="bg-white shadow rounded-xl p-6 mb-10">
         <h3 class="text-xl font-semibold mb-4">Study Guides</h3>
         <p class="text-slate-500">Coming soon...</p>
@@ -101,95 +93,121 @@
   </div>
 
   <script>
-    // Hide loader after load
-    window.addEventListener('load', () => {
-      document.getElementById('loader').classList.add('fade-out');
-    });
-
-    // Auth check
     const token = localStorage.getItem('token');
     if (!token) {
       alert('Please log in first.');
       window.location.href = '/auth.html';
     }
 
-    // Load user's questions
+    window.addEventListener('load', () => {
+      document.getElementById('loader').classList.add('fade-out');
+      loadQuestions();
+    });
+
     async function loadQuestions() {
-      try {
-        const res = await fetch('/api/questions/mine', {
-          headers: { 'Authorization': `Bearer ${token}` }
-        });
-        const data = await res.json();
+      const res = await fetch('/api/questions/mine', {
+        headers: { 'Authorization': `Bearer ${token}` }
+      });
+      const data = await res.json();
+      const list = document.getElementById('questionsList');
+      list.innerHTML = '';
 
-        const list = document.getElementById('questionsList');
-        list.innerHTML = '';
-
-        if (!Array.isArray(data)) {
-          list.innerHTML = '<li class="text-red-500">❌ Failed to load questions.</li>';
-          return;
-        }
-
-        data.reverse().forEach(q => {
-          const li = document.createElement('li');
-          li.className = 'bg-slate-50 p-4 rounded shadow flex justify-between items-start';
-
-          li.innerHTML = `
-            <div>
-              <a href="questions.html?id=${q.id}" class="text-blue-600 hover:underline font-bold">${q.topic}</a>
-              <p class="text-slate-800">${q.question}</p>
-              <p class="text-sm text-slate-500">👤 You</p>
-            </div>
-            <div class="space-x-2">
-              <button class="text-xs bg-yellow-100 text-yellow-800 px-2 py-1 rounded hover:bg-yellow-200">✏️ Edit</button>
-              <button class="text-xs bg-red-100 text-red-800 px-2 py-1 rounded hover:bg-red-200">🗑️ Delete</button>
-            </div>
-          `;
-          list.appendChild(li);
-        });
-      } catch (err) {
-        console.error(err);
-        document.getElementById('questionsList').innerHTML = '<li class="text-red-500">❌ Error loading questions.</li>';
-      }
-    }
-
-    // Submit form handler
-    document.getElementById('questionForm').addEventListener('submit', async function (e) {
-      e.preventDefault();
-
-      const topic = document.getElementById('topic')?.value?.trim();
-      const question = document.getElementById('questionText')?.value?.trim();
-
-      if (!token || !topic || !question) {
-        alert("❌ Missing topic, question, or user.");
+      if (!Array.isArray(data)) {
+        list.innerHTML = '<li class="text-red-500">❌ Failed to load questions.</li>';
         return;
       }
 
-      try {
-        const res = await fetch('/api/questions', {
-          method: 'POST',
+      data.reverse().forEach(q => {
+        const li = document.createElement('li');
+        li.className = 'bg-slate-50 p-4 rounded shadow flex justify-between items-start';
+        li.innerHTML = `
+          <div>
+            <a href="questions.html?id=${q.id}" class="text-blue-600 hover:underline font-bold">${q.topic}</a>
+            <p class="text-slate-800 editable" data-id="${q.id}" data-topic="${q.topic}" data-question="${q.question}">${q.question}</p>
+            <p class="text-sm text-slate-500">👤 You</p>
+          </div>
+          <div class="space-x-2">
+            <button onclick="editQuestion(${q.id})" class="text-xs bg-yellow-100 text-yellow-800 px-2 py-1 rounded hover:bg-yellow-200">✏️ Edit</button>
+            <button onclick="deleteQuestion(${q.id})" class="text-xs bg-red-100 text-red-800 px-2 py-1 rounded hover:bg-red-200">🗑️ Delete</button>
+          </div>
+        `;
+        list.appendChild(li);
+      });
+    }
+
+    async function deleteQuestion(id) {
+      if (!confirm('Are you sure you want to delete this question?')) return;
+      const res = await fetch(`/api/questions/${id}`, {
+        method: 'DELETE',
+        headers: { 'Authorization': `Bearer ${token}` }
+      });
+      if (res.ok) {
+        alert('✅ Deleted!');
+        loadQuestions();
+      } else {
+        alert('❌ Failed to delete.');
+      }
+    }
+
+    async function editQuestion(id) {
+      const p = document.querySelector(`.editable[data-id='${id}']`);
+      const currentText = p.textContent;
+      const input = document.createElement('textarea');
+      input.className = "w-full border px-2 py-1 rounded";
+      input.value = currentText;
+      p.replaceWith(input);
+
+      const saveBtn = document.createElement('button');
+      saveBtn.textContent = "💾 Save";
+      saveBtn.className = "mt-2 text-xs bg-green-100 text-green-800 px-2 py-1 rounded hover:bg-green-200";
+      p.nextElementSibling.after(saveBtn);
+
+      saveBtn.addEventListener('click', async () => {
+        const newText = input.value.trim();
+        if (!newText) return alert("❌ Cannot save empty question.");
+        const res = await fetch(`/api/questions/${id}`, {
+          method: 'PUT',
           headers: {
             'Content-Type': 'application/json',
             'Authorization': `Bearer ${token}`
           },
-          body: JSON.stringify({ topic, question })
+          body: JSON.stringify({ question: newText })
         });
-
-        const data = await res.json();
-
         if (res.ok) {
-          alert('✅ Question submitted!');
-          document.getElementById('questionForm').reset();
+          alert('✅ Updated!');
           loadQuestions();
         } else {
-          alert(`❌ Error: ${data.error}`);
+          alert('❌ Failed to update.');
         }
-      } catch (err) {
-        console.error(err);
-        alert('Failed to submit question.');
+      });
+    }
+
+    document.getElementById('questionForm').addEventListener('submit', async function (e) {
+      e.preventDefault();
+      const topic = document.getElementById('topic')?.value?.trim();
+      const question = document.getElementById('questionText')?.value?.trim();
+      if (!token || !topic || !question) {
+        alert("❌ Missing topic, question, or user.");
+        return;
+      }
+      const res = await fetch('/api/questions', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'Authorization': `Bearer ${token}`
+        },
+        body: JSON.stringify({ topic, question })
+      });
+      const data = await res.json();
+      if (res.ok) {
+        alert('✅ Question submitted!');
+        document.getElementById('questionForm').reset();
+        loadQuestions();
+      } else {
+        alert(`❌ Error: ${data.error}`);
       }
     });
 
-    // Search filter
     document.getElementById('searchInput').addEventListener('input', function () {
       const search = this.value.toLowerCase();
       document.querySelectorAll('#questionsList li').forEach(li => {
@@ -197,9 +215,6 @@
         li.style.display = text.includes(search) ? 'block' : 'none';
       });
     });
-
-    // Load questions on page load
-    window.onload = loadQuestions;
   </script>
 </body>
 </html>
