--- a/toolbox_academy_preview/dashboard.html
+++ b/toolbox_academy_preview/dashboard.html
@@ -28,7 +28,6 @@
   </style>
 </head>
 <body class="bg-slate-100 text-slate-800 font-sans">
-
   <!-- Loader -->
   <div id="loader">
     <h1 class="text-3xl font-bold mb-2 animate-pulse text-blue-400">StudyWrench</h1>
@@ -123,7 +122,7 @@
         li.innerHTML = `
           <div>
             <a href="questions.html?id=${q.id}" class="text-blue-600 hover:underline font-bold">${q.topic}</a>
-            <p class="text-slate-800 editable" data-id="${q.id}" data-topic="${q.topic}" data-question="${q.question}">${q.question}</p>
+            <p class="text-slate-800 editable" data-id="${q.id}">${q.question}</p>
             <p class="text-sm text-slate-500">👤 You</p>
           </div>
           <div class="space-x-2">
@@ -137,15 +136,22 @@
 
     async function deleteQuestion(id) {
       if (!confirm('Are you sure you want to delete this question?')) return;
-      const res = await fetch(`/api/questions/${id}`, {
-        method: 'DELETE',
-        headers: { 'Authorization': `Bearer ${token}` }
-      });
-      if (res.ok) {
-        alert('✅ Deleted!');
-        loadQuestions();
-      } else {
-        alert('❌ Failed to delete.');
+      try {
+        const res = await fetch(`/api/questions/${id}`, {
+          method: 'DELETE',
+          headers: { 'Authorization': `Bearer ${token}` }
+        });
+
+        if (res.ok) {
+          alert('✅ Deleted!');
+          loadQuestions();
+        } else {
+          const err = await res.json();
+          alert(`❌ Failed to delete: ${err.error || res.statusText}`);
+        }
+      } catch (error) {
+        alert('❌ Network error while deleting.');
+        console.error(error);
       }
     }
 
@@ -153,31 +159,39 @@
       const p = document.querySelector(`.editable[data-id='${id}']`);
       const currentText = p.textContent;
       const input = document.createElement('textarea');
-      input.className = "w-full border px-2 py-1 rounded";
+      input.className = "w-full border px-2 py-1 rounded mt-2";
       input.value = currentText;
       p.replaceWith(input);
 
       const saveBtn = document.createElement('button');
       saveBtn.textContent = "💾 Save";
       saveBtn.className = "mt-2 text-xs bg-green-100 text-green-800 px-2 py-1 rounded hover:bg-green-200";
-      p.nextElementSibling.after(saveBtn);
+      input.parentElement.appendChild(saveBtn);
 
       saveBtn.addEventListener('click', async () => {
         const newText = input.value.trim();
         if (!newText) return alert("❌ Cannot save empty question.");
-        const res = await fetch(`/api/questions/${id}`, {
-          method: 'PUT',
-          headers: {
-            'Content-Type': 'application/json',
-            'Authorization': `Bearer ${token}`
-          },
-          body: JSON.stringify({ question: newText })
-        });
-        if (res.ok) {
-          alert('✅ Updated!');
-          loadQuestions();
-        } else {
-          alert('❌ Failed to update.');
+
+        try {
+          const res = await fetch(`/api/questions/${id}`, {
+            method: 'PUT',
+            headers: {
+              'Content-Type': 'application/json',
+              'Authorization': `Bearer ${token}`
+            },
+            body: JSON.stringify({ question: newText })
+          });
+
+          if (res.ok) {
+            alert('✅ Updated!');
+            loadQuestions();
+          } else {
+            const err = await res.json();
+            alert(`❌ Failed to update: ${err.error || res.statusText}`);
+          }
+        } catch (error) {
+          alert('❌ Network error while updating.');
+          console.error(error);
         }
       });
     }
@@ -186,10 +200,12 @@
       e.preventDefault();
       const topic = document.getElementById('topic')?.value?.trim();
       const question = document.getElementById('questionText')?.value?.trim();
+
       if (!token || !topic || !question) {
         alert("❌ Missing topic, question, or user.");
         return;
       }
+
       const res = await fetch('/api/questions', {
         method: 'POST',
         headers: {
@@ -198,6 +214,7 @@
         },
         body: JSON.stringify({ topic, question })
       });
+
       const data = await res.json();
       if (res.ok) {
         alert('✅ Question submitted!');
