--- a/toolbox_academy_preview/dashboard.html
+++ b/toolbox_academy_preview/dashboard.html
@@ -26,17 +26,9 @@
       to { opacity: 0; visibility: hidden; }
     }
   </style>
-  <script>
-    const token = localStorage.getItem('token');
-    if (!token) {
-      document.write('<style>body{display:none}</style>');
-      window.location.href = '/auth.html';
-    }
-  </script>
 </head>
 <body class="bg-slate-100 text-slate-800 font-sans">
 
-  <!-- Loader -->
   <div id="loader">
     <h1 class="text-3xl font-bold mb-2 animate-pulse text-blue-400">StudyWrench</h1>
     <p class="text-slate-300">Loading your dashboard...</p>
@@ -82,77 +74,76 @@
         </div>
         <ul id="questionsList" class="space-y-2 text-slate-700"></ul>
       </section>
-
-      <!-- Coming Soon Sections -->
-      <section id="flashcards" class="bg-white shadow rounded-xl p-6 mb-10">
-        <h3 class="text-xl font-semibold mb-4">Flashcards</h3>
-        <p class="text-slate-500">Coming soon...</p>
-      </section>
-      <section id="careers" class="bg-white shadow rounded-xl p-6 mb-10">
-        <h3 class="text-xl font-semibold mb-4">Career Paths</h3>
-        <p class="text-slate-500">Coming soon...</p>
-      </section>
-      <section id="guides" class="bg-white shadow rounded-xl p-6 mb-10">
-        <h3 class="text-xl font-semibold mb-4">Study Guides</h3>
-        <p class="text-slate-500">Coming soon...</p>
-      </section>
     </main>
   </div>
 
   <script>
+    const token = localStorage.getItem('token');
+    if (!token) {
+      window.location.href = "/auth.html";
+    }
+
     window.addEventListener('load', () => {
       document.getElementById('loader').classList.add('fade-out');
       loadQuestions();
     });
 
     async function loadQuestions() {
-      const res = await fetch('/api/questions/mine', {
-        headers: { 'Authorization': `Bearer ${token}` }
-      });
-      const data = await res.json();
-      const list = document.getElementById('questionsList');
-      list.innerHTML = '';
+      try {
+        const res = await fetch('/api/questions/mine', {
+          headers: { 'Authorization': `Bearer ${token}` }
+        });
+        const data = await res.json();
+        const list = document.getElementById('questionsList');
+        list.innerHTML = '';
 
-      if (!Array.isArray(data)) {
-        list.innerHTML = '<li class="text-red-500">❌ Failed to load questions.</li>';
-        return;
+        if (!Array.isArray(data)) {
+          list.innerHTML = '<li class="text-red-500">❌ Failed to load questions.</li>';
+          return;
+        }
+
+        data.reverse().forEach(q => {
+          const li = document.createElement('li');
+          li.className = 'bg-slate-50 p-4 rounded shadow flex justify-between items-start';
+
+          li.innerHTML = `
+            <div>
+              <a href="questions.html?id=${q.id}" class="text-blue-600 hover:underline font-bold">${q.topic}</a>
+              <p class="text-slate-800 editable" data-id="${q.id}">${q.question}</p>
+              <p class="text-sm text-slate-500">👤 You</p>
+            </div>
+            <div class="space-x-2">
+              <button onclick="editQuestion(${q.id})" class="text-xs bg-yellow-100 text-yellow-800 px-2 py-1 rounded hover:bg-yellow-200">✏️ Edit</button>
+              <button onclick="deleteQuestion(${q.id})" class="text-xs bg-red-100 text-red-800 px-2 py-1 rounded hover:bg-red-200">🗑️ Delete</button>
+            </div>
+          `;
+          list.appendChild(li);
+        });
+      } catch (err) {
+        console.error('❌ Load error:', err);
+        document.getElementById('questionsList').innerHTML = '<li class="text-red-500">❌ Error loading questions.</li>';
       }
-
-      data.forEach(q => {
-        const li = document.createElement('li');
-        li.className = 'bg-slate-50 p-4 rounded shadow flex justify-between items-start';
-        li.innerHTML = `
-          <div>
-            <a href="questions.html?id=${q.id}" class="text-blue-600 hover:underline font-bold">${q.topic}</a>
-            <p class="text-slate-800 editable" data-id="${q.id}">${q.question}</p>
-            <p class="text-sm text-slate-500">👤 You</p>
-          </div>
-          <div class="space-x-2">
-            <button onclick="editQuestion(${q.id})" class="text-xs bg-yellow-100 text-yellow-800 px-2 py-1 rounded hover:bg-yellow-200">✏️ Edit</button>
-            <button onclick="deleteQuestion(${q.id})" class="text-xs bg-red-100 text-red-800 px-2 py-1 rounded hover:bg-red-200">🗑️ Delete</button>
-          </div>
-        `;
-        list.appendChild(li);
-      });
     }
 
     async function deleteQuestion(id) {
       if (!confirm('Are you sure you want to delete this question?')) return;
+
       try {
         const res = await fetch(`/api/questions/${id}`, {
           method: 'DELETE',
           headers: { 'Authorization': `Bearer ${token}` }
         });
+
         if (res.ok) {
-          alert('✅ Deleted!');
+          alert("✅ Deleted!");
           loadQuestions();
         } else {
           const err = await res.json();
           alert(`❌ Failed to delete: ${err.error || res.statusText}`);
         }
-      } catch (error) {
-        alert('❌ Network error while deleting.');
-        console.error(error);
+      } catch (err) {
+        alert("❌ Network error while deleting.");
+        console.error(err);
       }
     }
 
@@ -172,6 +163,7 @@
       saveBtn.addEventListener('click', async () => {
         const newText = input.value.trim();
         if (!newText) return alert("❌ Cannot save empty question.");
+
         try {
           const res = await fetch(`/api/questions/${id}`, {
             method: 'PUT',
@@ -181,6 +173,7 @@
             },
             body: JSON.stringify({ question: newText })
           });
+
           if (res.ok) {
             alert('✅ Updated!');
             loadQuestions();
@@ -188,9 +181,9 @@
             const err = await res.json();
             alert(`❌ Failed to update: ${err.error || res.statusText}`);
           }
-        } catch (error) {
+        } catch (err) {
           alert('❌ Network error while updating.');
-          console.error(error);
+          console.error(err);
         }
       });
     }
@@ -199,27 +192,33 @@
       e.preventDefault();
       const topic = document.getElementById('topic')?.value?.trim();
       const question = document.getElementById('questionText')?.value?.trim();
+
       if (!token || !topic || !question) {
         alert("❌ Missing topic, question, or user.");
         return;
       }
 
-      const res = await fetch('/api/questions', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          'Authorization': `Bearer ${token}`
-        },
-        body: JSON.stringify({ topic, question })
-      });
+      try {
+        const res = await fetch('/api/questions', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'Authorization': `Bearer ${token}`
+          },
+          body: JSON.stringify({ topic, question })
+        });
 
-      const data = await res.json();
-      if (res.ok) {
-        alert('✅ Question submitted!');
-        document.getElementById('questionForm').reset();
-        loadQuestions();
-      } else {
-        alert(`❌ Error: ${data.error}`);
+        const data = await res.json();
+        if (res.ok) {
+          alert('✅ Question submitted!');
+          document.getElementById('questionForm').reset();
+          loadQuestions();
+        } else {
+          alert(`❌ Error: ${data.error}`);
+        }
+      } catch (err) {
+        alert("❌ Network error while submitting.");
+        console.error(err);
       }
     });
 
@@ -233,5 +232,3 @@
   </script>
 </body>
 </html>
-
-      
